tests/ui/compiletest-self-test/meta-expected-error-wrong-rev.a.stderr
error[E0308]: mismatched types
  --> $DIR/meta-expected-error-wrong-rev.rs:14:18
   |
LL |     let x: u32 = 22_usize;
   |            ---   ^^^^^^^^ expected `u32`, found `usize`
   |            |
   |            expected due to this
   |
help: change the type of the numeric literal from `usize` to `u32`
   |
LL -     let x: u32 = 22_usize;
LL +     let x: u32 = 22_u32;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
